<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.franekjemiolo.stuffmanageralpha.DetailedContainerViewActivity">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="100" />

    <item android:id="@+id/action_edit" android:title="Edit"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/action_remove" android:title="@string/action_remove"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>
